--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="container">
 		<header>
-			<img class="profile-picture circle" src="file:///C:/Users/milena.bednarczyk/Documents/Screens & Videos/Quik Screeny/MBednarczyk.jpg">
+			<img class="profile-picture circle" src="MBednarczyk.jpg">
 			<div>
 				<h1>Milena Bednarczyk</h1>
 				<span><b>Manual Software Tester</b></span>
@@ -17,9 +17,9 @@
 			</div>
 		<address>
 			<ul>
-				<li><img class="address-icon circle" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/phone.png"><b>Numer telefonu: </b><a href="tel: 123456789">123 456 789</a></li>
-				<li><img class="address-icon circle" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/mail.png"><b>E-mail: </b><a href="mailto:milena@tester.com">milena@tester.com</a></li>
-				<li><img class="address-icon circle" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/pin.png"><b>Miasto: </b>Katowice</li>
+				<li><img class="address-icon circle" src="phone.png"><b>Numer telefonu: </b><a href="tel: 123456789">123 456 789</a></li>
+				<li><img class="address-icon circle" src="mail.png"><b>E-mail: </b><a href="mailto:milena@tester.com">milena@tester.com</a></li>
+				<li><img class="address-icon circle" src="pin.png"><b>Miasto: </b>Katowice</li>
 			</ul>
 		</address>
 		</header>
@@ -55,10 +55,10 @@
 		<section>
 			<h2>Zainteresowania</h2>
 			<ul class="hobbies">
-				<li><img class="hobby" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/camera.png">Fotogafia portretowa i okolicznościowa</li>
-				<li><img class="hobby" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/reading-book.png">Literatura współczesna</li>
-				<li><img class="hobby" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/lotus.png">Joga oraz medytacja</li>
-				<li><img class="hobby" src="file:///C:/Users/milena.bednarczyk/Desktop/Stronka/mountain-bike.png">Jazda na rowerze</li>
+				<li><img class="hobby" src="camera.png">Fotogafia portretowa i okolicznościowa</li>
+				<li><img class="hobby" src="reading-book.png">Literatura współczesna</li>
+				<li><img class="hobby" src="lotus.png">Joga oraz medytacja</li>
+				<li><img class="hobby" src="mountain-bike.png">Jazda na rowerze</li>
 			</ul>
 		</section>	
 	</main>  
